--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
                             {},
                             {
                                 rows: [
-                                    { template: `version 1`, autoheight: true, borderless: true },
+                                    { template: `version 1.3`, autoheight: true, borderless: true },
                                     {
                                         view: "button",
-                                        value: "Download",
+                                        value: "Download csv",
                                         autowidth: true,
                                         click: function () {
-                                            let dataUrl = 'data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent);
                                             const urlArray = [];
 
                                             for (let i = 0; i < 3; i++) {
@@ -40,7 +39,7 @@
                                             multiDownload(urlArray, { rename: ({ index }) => `test${index}.csv` });
 
                                             // working solution for one file
-                                            //let dataUrl = 'data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent);
+                                            // let dataUrl = 'data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent);
                                             // let link = document.createElement('a');
                                             // link.download = 'test.csv';
                                             // link.href = dataUrl;
@@ -58,22 +57,8 @@
                     {}
                 ]
             });
-            setTimeout(() => {
-                $$("pdf").parse({ "data": atob(pdfDoc) });
-            }, 100);
         });
     </script>
 </body>
 
 </html>
-
-<!-- // const downloadButton = $$("toolbar").$view.querySelector('.webix_scroll_cont').lastChild;
-// webix.event(downloadButton, 'click', (e) => {
-//     e.stopImmediatePropagation();
-//     $$("pdf").$pdfDoc.getData().then((data) => {
-//         if (!data) return;
-//         const blob = new Blob([data], { type: "application/pdf" });
-//         const urlObj = window.URL.createObjectURL(blob, { type: "application/pdf" });
-//         multiDownload([urlObj], { rename: () => "test" });
-//     });
-// }, true); -->
