--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             {},
                             {
                                 rows: [
-                                    { template: `version 1.6`, autoheight: true, borderless: true },
+                                    { template: `version 1.7`, autoheight: true, borderless: true },
                                     {
                                         view: "button",
                                         value: "Download csv",
@@ -45,7 +45,7 @@
                                                 setTimeout(function () {
                                                     link.click();
                                                     // Cleanup the DOM 
-                                                    document.body.removeChild(link);
+                                                    // document.body.removeChild(link);
                                                 }, 500 * index);
                                             });
 
