--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
                             {},
                             {
                                 rows: [
-                                    { template: `version 1.7`, autoheight: true, borderless: true },
+                                    { template: `version 1.9`, autoheight: true, borderless: true },
                                     {
                                         view: "button",
                                         value: "Download csv",
                                         autowidth: true,
                                         click: function () {
                                             // Solution for apple developers
-                                            const urlArray = [];
-                                            for (let i = 0; i < 3; i++) {
-                                                urlArray.push('data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent));
-                                            }
-                                            urlArray.forEach((url, index) => {
-                                                var link = document.createElement("a");
-                                                link.download = `test${index}.csv`;
-                                                link.target = "_blank";
-                                                // Construct the URI 
-                                                link.href = url;
-                                                document.body.appendChild(link);
-                                                setTimeout(function () {
-                                                    link.click();
-                                                    // Cleanup the DOM 
-                                                    // document.body.removeChild(link);
-                                                }, 500 * index);
-                                            });
+                                            // const urlArray = [];
+                                            // for (let i = 0; i < 3; i++) {
+                                            //     urlArray.push('data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent));
+                                            // }
+                                            // urlArray.forEach((url, index) => {
+                                            //     var link = document.createElement("a");
+                                            //     link.download = `test${index}.csv`;
+                                            //     link.target = "_blank";
+                                            //     // Construct the URI 
+                                            //     link.href = url;
+                                            //     document.body.appendChild(link);
+                                            //     setTimeout(function () {
+                                            //         link.click();
+                                            //         // Cleanup the DOM 
+                                            //         // document.body.removeChild(link);
+                                            //     }, 500 * index);
+                                            // });
 
 
 
@@ -59,15 +59,15 @@
                                             // }
                                             // multiDownload(urlArray, { rename: ({ index }) => `test${index}.csv` });
 
-                                            // working solution for one file
-                                            // let dataUrl = 'data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent);
-                                            // let link = document.createElement('a');
-                                            // link.download = 'test.csv';
-                                            // link.href = dataUrl;
+                                            //working solution for one file
+                                            let dataUrl = 'data:text/csv;charset=utf-8,' + encodeURIComponent(csvContent);
+                                            let link = document.createElement('a');
+                                            link.download = 'test.csv';
+                                            link.href = dataUrl;
 
-                                            // document.body.appendChild(link);
-                                            // link.click();
-                                            // document.body.removeChild(link);
+                                            document.body.appendChild(link);
+                                            link.click();
+                                            document.body.removeChild(link);
                                         }
                                     }
                                 ]
