--- a/index.html
+++ b/index.html
@@ -23,27 +23,46 @@
 </head>
 
 <body>
-    <script>
-        webix.ui({
-            rows: [
-                {},
-                {
-                    cols: [
-                        { gravity: 0.2 },
-                        {
-                            view: "iframe",
-                            id: "frame-body",
-                            src: "http://jsondiff.com/?left=http://jsondiff.com/one.json&right=http://jsondiff.com/two.json",
-                            width: 1300,
-                            height: 800
-                        },
-                        { gravity: 0.2 }
-                    ]
-                },
-                {}
-            ]
-        });
-    </script>
+
+    <body>
+        <div id="main">
+            <div class="initContainer">
+                <div class="left">
+                    <textarea spellcheck="false" id="textarealeft"
+                        placeholder="Enter JSON to compare, enter an URL to JSON" tabindex="1">
+                    </textarea>
+                    <pre id="errorLeft" class="error"></pre>
+                    <span class="fileInput">or <input type="file" id="fileLeft"
+                            onchange="jdd.handleFiles(this.files, 'left')" tabindex="4">
+                    </span>
+                </div>
+
+                <div class="center">
+                    <button id="compare" tabindex="3">Compare</button>
+                    <div class="throbber-loader"></div>
+                    <br /><br />
+                    or try some<br /><a href="#" id="sample">sample data</a>
+
+                </div>
+
+                <div class="right">
+                    <textarea spellcheck="false" class="right" id="textarearight"
+                        placeholder="Enter JSON to compare, enter an URL to JSON" tabindex="2">
+                </textarea>
+                    <pre id="errorRight" class="error"></pre>
+                    <span class="fileInput">or <input type="file" id="fileRight"
+                            onchange="jdd.handleFiles(this.files, 'right')" tabindex="5"></span>
+                </div>
+            </div>
+
+            <div class="diffcontainer">
+                <pre id="out" class="left" class="codeBlock"></pre>
+                <pre id="out2" class="right" class="codeBlock"></pre>
+                <ul id="toolbar" class="toolbar"></ul>
+            </div>
+        </div>
+
+    </body>
 </body>
 
 </html>
